# recipes

./: .gitignore  Dockerfile  PLAN.md  README.md  brief.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
openwebui/: deploy.py  recipe_tool.py
src/client/: package-lock.json  package.json
src/client/src/: App.css  App.tsx  api.ts  main.tsx  types.ts
src/recipes/: api.py  cli.py  config.py  db.py  discovery.py  embeddings.py  ingredients.py  models.py  scraper.py
src/service/recipes/: api.py  cli.py  config.py  db.py  discovery.py  embeddings.py  models.py  query.py  scraper.py  search.py  templatize.py
tests/: conftest.py  test_api.py  test_db.py  test_discovery.py  test_e2e.py  test_embeddings.py  test_grocery_list.py  test_ingredients.py  test_recipe_tool.py  test_scraper.py  test_search.py
tests/fixtures/: recipe.html  sitemap.xml
tests/fixtures/justinesnacks/: post-sitemap-excerpt.xml  robots.txt  sitemap_index.xml
tests/fixtures/mollybaz/: category-sitemap.xml  more-sitemap.xml  page-sitemap.xml  post-sitemap.xml  post_tag-sitemap.xml  robots.txt  secondary_category-sitemap.xml  sitemap_index.xml  update_posts-sitemap.xml  wf-sitemap.xml
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  api.ts  types.ts
ui/src/components/: AddSiteDropdown.tsx  AddSiteModal.tsx  CollectionPicker.tsx  FilterPanel.tsx  Modal.tsx  RecipeCard.tsx  RecipeGrid.tsx  SearchBar.tsx  SettingsModal.tsx  StatsBar.tsx
ui/src/hooks/: useUrlFilters.ts
ui/src/pages/: GroceryListPage.tsx  (+2 more)
(+10 files in other folders)
