[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipes"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "recipe-scrapers>=14.0",
    "ultimate-sitemap-parser>=0.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "click>=8.1",
    "pydantic-settings>=2.2",
    "requests>=2.31",
]

[project.scripts]
recipes = "recipes.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/recipes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests (slow, require live network)"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.44",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
]
